<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:plannehr="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
    
	<item android:id="@+id/action_productAddByVoice"
      	  android:showAsAction="always"
     	  android:icon="@android:drawable/ic_btn_speak_now"
     	  android:title="@string/productAdd" />

    <item android:id="@+id/action_productAdd"
		  android:showAsAction="always"
		  android:icon="@drawable/ic_action_collections_new_label"
		  android:title="@string/productAdd" />
    
    <item android:id="@+id/action_doShopping"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_doshopping"
        android:title="@string/buttonDoShopping" />
    
    <item android:id="@+id/action_refresh"
		android:showAsAction="always"
		android:icon="@drawable/ic_action_refresh"
		android:title="@string/textActionRefresh" />
		    
    <item android:id="@+id/dropdown_menu"
        android:showAsAction="always"
        android:title="@string/textOptions"
        android:icon="@drawable/ic_action_overflow">
		<menu>
		    <item android:id="@+id/action_superMarkets"
		        android:showAsAction="ifRoom"
		        android:icon="@drawable/ic_action_market"
		        android:title="@string/labelSupermarkets" />
			    
		    <item android:id="@+id/action_wallet"
		        android:showAsAction="ifRoom"
		 	    android:icon="@drawable/ic_currency"
		 	    android:title="@string/actionWallet" />
		    		 	
		    <item android:id="@+id/action_settings"
		 	    android:showAsAction="ifRoom"
		 	    android:icon="@drawable/ic_action_settings"
		 	    android:title="@string/actionSettings" />
		    
		    <item android:id="@+id/action_help"
	     		android:showAsAction="ifRoom"
	     		android:icon="@drawable/ic_action_help"
	     		android:title="@string/textHelp" />

		</menu>
 	</item>

</menu> 

