<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

	<EditText 
	    android:id="@+id/edProductName" 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/product_name"
	    android:imeOptions="actionNext"
	    style="@style/editTextData"
	    android:inputType="textCapSentences" /> 

    <Spinner 
	    android:id="@+id/spCategory"
	    style="@style/spinnerBlue" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/category_array" 
	    android:prompt="@string/categoryId" />
    
    <LinearLayout 
        android:id="@+id/amountLayout"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">
		<EditText 
		    android:id="@+id/edAmount" 
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:hint="@string/amount"
		    style="@style/editTextData" 
		    android:inputType="numberDecimal" />
	    <Spinner 
	        android:id="@+id/spMeasure" 
			style="@style/spinnerBlue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    android:background="@drawable/spinner_blue"
	        android:entries="@array/measure_array"
	        android:prompt="@string/measureunit" />
	</LinearLayout>
	
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
	    <Button 
		    android:id="@+id/btnCancel"
		    android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
			style="@style/buttonColouredActionCancel"
		    android:text="@string/btnCancel" 
		    android:onClick="btnCancel_onClick" />
		<Button 
		    android:id="@+id/btnSave"
		    android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
			style="@style/buttonColouredActionSave"
		    android:text="@string/btnSave"
		    android:onClick="btnSave_onClick" />
	</LinearLayout>
</LinearLayout>
