<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_width="match_parent"
	 android:layout_height="match_parent"
     android:orientation="vertical">
    
    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/textTitleMessage"
        android:text="@string/textExpensesHelpKeyNotes" />
    
    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        style="@style/textMessage"
        android:text="@string/textExpensesHelpKeyNote1" />
    
    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNote2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        style="@style/textMessage"
        android:text="@string/textExpensesHelpKeyNote2" />
    
    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNote3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        style="@style/textMessage"
        android:text="@string/textExpensesHelpKeyNote3" />

    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNote4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        style="@style/textMessage"
        android:text="@string/textExpensesHelpKeyNote4" />
    
    <com.householdplanner.shoppingapp.views.TextViewRoboto 
        android:id="@+id/textExpensesHelpKeyNote5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        style="@style/textMessage"
        android:text="@string/textExpensesHelpKeyNote5" />
    
</LinearLayout>
