<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnTicketDate"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="showDatePickerDialog" 
        android:text="@string/atTicketDate"/>

    <EditText 
        android:id="@+id/edtExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hintTicketExpense" 
        style="@style/editTextData"
        android:layout_below="@id/btnTicketDate" />
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/edtExpense">

        <android.support.v7.widget.AppCompatButton android:id="@+id/btnCancelTicket"
            android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
			android:text="@string/btnCancel"
	        android:onClick="btnCancelTicket_onClick"/>
        <android.support.v7.widget.AppCompatButton android:id="@+id/btnSaveTicket"
            android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
			android:text="@string/btnSave"
	        android:onClick="btnSaveTicket_onClick"/>

    </LinearLayout>
    
</RelativeLayout>
