<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <android.support.v7.widget.AppCompatSpinner android:id="@+id/spMonth"
        android:layout_height="wrap_content"
	    android:layout_width="match_parent" 
        android:entries="@array/month_array"
        android:prompt="@string/monthName" />
    
    <TextView 
        android:id="@+id/textBudgetAvailable" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_below="@+id/spMonth"
        android:layout_alignLeft="@+id/spMonth"
        style="@style/textMessage"
        android:text="@string/budgetAvailable"/>
    
    <EditText 
        android:id="@+id/edtAvailable"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBudgetAvailable"
        android:inputType="numberDecimal"
        style="@style/editTextData"
        android:hint="@string/budgetAvailable"/>
    
    <TextView 
        android:id="@+id/textBudgetTarget" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_toRightOf="@+id/textBudgetAvailable"
        android:layout_alignLeft="@+id/edtTarget"
        android:layout_alignTop="@+id/textBudgetAvailable"
        style="@style/textMessage"
        android:text="@string/budgetTarget"/>
    <EditText 
        android:id="@+id/edtTarget"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edtAvailable"
        android:layout_toRightOf="@+id/edtAvailable"
        android:inputType="numberDecimal"
        style="@style/editTextData"
        android:hint="@string/budgetTarget"/>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/edtTarget"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
	    <android.support.v7.widget.AppCompatButton android:id="@+id/btnCancelBudget"
	        android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
	        android:text="@string/btnCancel"
	        android:onClick="btnCancelBudget_onClick"/>
	    <android.support.v7.widget.AppCompatButton android:id="@+id/btnSaveBudget"
	        android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:gravity="center"
	        android:text="@string/btnSave"
	        android:onClick="btnSaveBudget_onClick" />
    </LinearLayout>
    
</RelativeLayout>
