<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:plannehr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_actionbar"
        android:entries="@array/month_array"
        android:prompt="@string/monthName" />

    <LinearLayout
        android:id="@+id/layoutValidationFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerMonth"
        android:orientation="horizontal">

        <com.applilandia.widget.ValidationField
            android:id="@+id/validationFieldAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            plannehr:hint="@string/budgetAvailable"
            plannehr:viewType="EditText" />

        <com.applilandia.widget.ValidationField
            android:id="@+id/validationFieldTarget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            plannehr:hint="@string/budgetTarget"
            plannehr:viewType="EditText" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSaveBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layoutValidationFields"
        android:text="@string/btnSave"
        android:theme="@style/Widget.ApplilandiaButton" />

</RelativeLayout>